# KuiperLLama

cmake/: cuda.cmake
kuiper/include/base/: alloc.h  base.h  buffer.h  cuda_config.h
kuiper/include/model/: config.h  llama3.h
kuiper/include/op/: layer.h  matmul.h
kuiper/include/sampler/: sampler.h
kuiper/include/tensor/: tensor.h
kuiper/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp
kuiper/source/model/: model.cpp
kuiper/source/op/: add.cpp  layer.cpp  matmul.cpp  rmsnorm.cpp
kuiper/source/op/kernels/: kernels_interfaces.cpp
kuiper/source/op/kernels/cpu/: add_kernel.cpp  rmsnorm_kernel.cpp
kuiper/source/op/kernels/cuda/: add_kernel.cu  argmax_kernel.cu  rmsnorm_kernel.cu
kuiper/source/tensor/: tensor.cpp
test/: CMakeLists.txt  test_main.cpp  utils.cu
test/test_op/: test_cu_add.cpp  test_load.cpp
test/test_tensor/: test_buffer.cpp  test_math.cpp  test_tensor.cpp
